--- a/css/usdz.webflow.css
+++ b/css/usdz.webflow.css
@@ -125,14 +125,11 @@
 .vertical {
   background-image: -webkit-linear-gradient(270deg, #fff, #fff);
   background-image: linear-gradient(180deg, #fff, #fff);
-  -webkit-transition: box-shadow 500ms ease;
-  transition: box-shadow 500ms ease;
 }
 
 .vertical:hover {
   background-image: -webkit-linear-gradient(270deg, #fff, #fff);
   background-image: linear-gradient(180deg, #fff, #fff);
-  box-shadow: 0 5px 10px 0 rgba(0, 0, 0, .1);
 }
 
 .list {
@@ -153,12 +150,22 @@
 }
 
 .video {
-  margin: 50px 20px;
+  display: block;
+  width: 375px;
+  height: 667px;
+  margin: 50px auto;
   text-align: center;
 }
 
 @media (max-width: 991px) {
   .h4 {
     font-size: 35px;
+  }
+}
+
+@media (max-width: 479px) {
+  .video {
+    width: 260px;
+    height: 480px;
   }
 }
